Document explore database (#59)
* bump taxon collapser table number

* updates explore_database.py documentation

* fixes typo

* updates build_database to remomve rename option

* adds GA tracking

* updates GA tracking

* removes broken badge from home

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: "PhyloFisher"
 remote_theme: "just-the-docs/just-the-docs"
 color_scheme: "light"
 logo: "/assets/images/TREE-PF-LOGO-WOtree.png"
+google_analytics: G-DLCS1JEP0T
